<resources>
    <string name="app_name" translatable="false">Split It</string>
    <string name="dummy_text" translatable="false">Xd xd</string>
    <string name="dummy_text2" translatable="false">$</string>
    <string name="split_logo_dcp" translatable="false">App logo</string>
    <string name="login_form_txt1">Iniciar sesión</string>
    <string name="login_form_txt2">Correo electrónico</string>
    <string name="login_form_txt3">Contraseña</string>
    <string name="login_form_btn1">Iniciar</string>
    <string name="login_form_not_found">Usuario no encontrado</string>
    <string name="preference_file_key" translatable="false">i4400PTNRf</string>
    <string name="login_form_success">¡Inicio de sesión correcto!</string>
    <string name="signout_btn">Cerrar sesión</string>
    <string name="home_menu_itm">Inicio</string>
    <string name="new_menu_itm">Nuevo Split</string>
    <string name="profile_menu_itm">Perfil</string>
    <string name="home_fragment_txt1">Splits Recientes</string>
    <string name="profile_btn2">Agregar amigo</string>
    <string name="home_split_txt1" translatable="false">$</string>
    <string name="main_snackbar_shake">¡Crear nuevo split!</string>
    <string name="new_split_txt1">Crear split</string>
    <string name="new_split_txt2">Total</string>
    <string name="add_split_txt3">Dividir entre:</string>
    <string name="add_split_btn2" translatable="false">+</string>
    <string name="add_aplit_paybtn">Pagar</string>
    <string name="new_split_edt2">Añadir amigos</string>
    <string name="profile_btn1">Copiar mi id de usuario</string>
    <string name="profile_btn1_toast">Id de usuario copiado!</string>
    <string name="profile_btn2_alert_title">Agregar amigo</string>
    <string name="profile_btn2_alert_msg">Ingresa el ID de usuario de tu amigo:</string>
    <string name="profile_btn2_alert_btn_pos">Agregar</string>
    <string name="profile_btn2_alert_btn_neg">Cancelar</string>
    <string name="profile_add_success">Amigo agregado!</string>
    <string name="profile_add_failure">Amigo ya agregado o error xd!</string>
    <string name="split_status_1">Pagado</string>
    <string name="split_status_0">Pendiente</string>
    <string name="new_friend_total_empty">Monto total vacío!</string>
    <string name="new_split_txt4">Agita para crear nuevo split</string>
    <string name="new_split_pay_sb">Primero divide entre tus amigos</string>
    <string name="new_split_pay_error">Error al crear nuevo split</string>
    <string name="new_split_txtNombre">Tienda</string>
    <string name="new_split_pay_success">Split pagado con éxito!</string>
    <string name="new_friend_storename_empty">Nombre de la tienda vacío!</string>
    <string name="add_friend_ID">Ingresa el ID de tu amigo</string>
    <string name="store_dummy_text">Pizza</string>
</resources>