<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_menu_itm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/home_icon"
        android:title="@string/home_menu_itm" />
    <item
        android:id="@+id/new_menu_itm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/new_icon"
        android:title="@string/new_menu_itm" />
    <item
        android:id="@+id/profile_menu_itm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile_menu_itm" />
</menu>